[OOE-24] Everything in Handlebars; still need to cleanup stuff

--- a/report-service/src/main/resources/web/html/exception.hbs
+++ b/report-service/src/main/resources/web/html/exception.hbs
@@ -31,9 +31,9 @@
         </li>
     </ul>
     <hr/>
-    <code>{{exceptionDetails.exceptionMessage}}</code>
+    <code>{{data.exceptionDetails.exceptionMessage}}</code>
     <pre>
-    {{#each exceptionDetails.stackTrace}}
+    {{#each data.exceptionDetails.stackTrace}}
         {{this}}
     {{/each}}
     </pre>
