--- a/report-service/src/main/resources/web/html/page.hbs
+++ b/report-service/src/main/resources/web/html/page.hbs
@@ -3,7 +3,15 @@
     <head> 
         <meta charset="utf-8"> 
         <title>Overops Report</title>
-        <style></style>
+        <style>
+            {{> style}}
+        </style>
     </head> 
-    <body></body>
+    <body>
+    {{#if hasExceptions}}
+        {{> exception}}
+    {{else}}
+        {{> report}}
+    {{/if}}
+    </body>
 </html>
