--- a/report-service/src/main/resources/web/template/style.hbs
+++ b/report-service/src/main/resources/web/template/style.hbs
@@ -1,5 +1,3 @@
-<style>
-
 .overops-quality-report a {
 text-decoration: none;
 }
@@ -82,39 +80,6 @@ border-color: hsl(7, 65.9%, 82.7%);
 background-color: #f5f5f5;
 border-color: #ccc;
 }
-.overops-quality-report [class^=icn-] {
-display: inline-block;
-height: 24px;
-width: 24px;
-background-repeat: no-repeat;
-background-size: 24px 24px;
-}
-.overops-quality-report .icn-lg {
-height: 48px;
-width: 48px;
-background-size: 48px 48px;
-}
-.overops-quality-report .icn-td {
-height: 20px;
-width: 20px;
-background-size: 20px 20px;
-margin: -5px 5px -5px -10px;
-}
-.overops-quality-report .icn-success {
-  background-image: url("data:image/svg+xml;base64,{{{assets.icnSuccess}}}");
-}
-.overops-quality-report .icn-warning {
-    background-image: url("data:image/svg+xml;base64,{{{assets.icnWarning}}}");
-}
-.overops-quality-report .icn-danger {
-    background-image: url("data:image/svg+xml;base64,{{{assets.icnDanger}}}");
-}
-.overops-quality-report .icn-times {
-    background-image: url("data:image/svg+xml;base64,{{{assets.icnTimes}}}");
-}
-.overops-quality-report .icn-question {
-    background-image: url("data:image/svg+xml;base64,{{{assets.icnQuestion}}}");
-}
 .overops-quality-report .table {
 border-collapse: collapse;
 width: 100%;
@@ -158,4 +123,20 @@ padding: 0;
 margin: .5em 0;
 }
 
-</style>
+svg:not(.overopsLogo) {
+height: 24px;
+width: 24px;
+margin: 0px 8px 0px 0px;
+}
+
+.alert svg {
+height: 48px;
+width: 48px;
+margin: 0px 8px 0px 8px;
+}
+
+#reportSummary svg {
+width: 20px;
+height: 20px;
+margin: -5px 5px -5px -10px;
+}
